--- a/Reboot/minhthanh/Task02x/appsettings.Development.json
+++ b/Reboot/minhthanh/Task02x/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AppicationDbContext": "Data Source=Appication.db"
   }
 }
