--- a/Reboot/QuangMinh/0.2.1/0.2.1.csproj
+++ b/Reboot/QuangMinh/0.2.1/0.2.1.csproj
@@ -7,4 +7,12 @@
     <RootNamespace>_0._2._1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
+  </ItemGroup>
+
 </Project>
